communication/shortener/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink
  namespace: cnd-shortener
  labels:
    app.kubernetes.io/name: shlink
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: shlink
