communication/shortener/web-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink-web-client
  namespace: cnd-shortener
  labels:
    app.kubernetes.io/name: shlink-web-client
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: shlink-web-client
